syntax = "proto3";

package protogrpc;

option go_package = "grpc-gateway/pb";

import "google/api/annotations.proto";

message ResUser {
    string id = 1;
    string name = 2;
    string email = 3;
}

message RequestAvatar {
    string id = 1;
    string name = 2;
    string secureUrl = 3;
    int64 price = 4;
    repeated ResUser purchasedBy = 5;
}

message ResponseOneAvatar {
    int32 code = 1;
    RequestAvatar data = 2;
}

message ResponseAvatars {
    int32 code = 1;
    repeated RequestAvatar data = 2;
}

message Name {
    string name = 1;
}

message EmptyAvatar {}

service Avatar {
    rpc GetOneAvatar(Name) returns (ResponseOneAvatar) {
        option (google.api.http) = {
            get: "/get-avatar"
        };
    }
    rpc GetAvatars(EmptyAvatar) returns (ResponseAvatars) {
        option (google.api.http) = {
            get: "/get-avatars"
        };
    }
}

